Added delete functionality through dialog

--- a/popup.html
+++ b/popup.html
@@ -69,13 +69,13 @@
                 </div>
             </div>
         </div>
-        <div id="delete-confirmation-page" class="page-container hidden-behind">
-            <div class="delete-dialog-grid">
+        <div id="delete-dialog-page" class="page-container hidden-behind">
+            <div id="delete-dialog-out" class="delete-dialog-grid">
                 <div class="delete-dialog-base">
-                    <div class="delete-dialog-text">MAIN will be deleted. Confirm?</div>
+                    <div class="delete-dialog-text"><span id="delete-group-name"></span> will be deleted. Confirm?</div>
                     <div class="delete-dialog-buttons">
-                        <div class="button symmetric">Confirm</div>
-                        <div class="button symmetric">Cancel</div>
+                        <div id="delete-dialog-confirm" class="button symmetric">Confirm</div>
+                        <div id="delete-dialog-cancel" class="button symmetric">Cancel</div>
                     </div>
                 </div>
             </div>
