Export now downloads a JSON file

--- a/popup.html
+++ b/popup.html
@@ -16,28 +16,12 @@
                     <a id="create-group-btn" class="button"><i class="far fa-plus-square"></i> New group</a>
                     <div></div>
                     <div></div>
-                    <a class="button"><i class="fas fa-ellipsis-v"></i></a>
+                    <a class="button"><i class="fas fa-cog"></i></a>
                 </div>
                 <div class="separator"></div>
                 <div class="outer-tabs-container scroll-hidden">
                     <div id="group-grid-container" class="mid-tabs-container">
-                        <!-- <div class="tab-groups-container">
-                            <div class="tabs-row">
-                                <p>First tab</p>
-                            </div>
-                            <div class="tabs-row">
-                                <p>Second tab</p>
-                            </div>
-                            <div class="tabs-row">
-                                <p>Third tab</p>
-                            </div>
-                            <div class="tabs-row">
-                                <p>Fourth tab</p>
-                            </div>
-                            <div class="tabs-row">
-                                <p>Fifth tab</p>
-                            </div>
-                        </div> -->
+                        <!-- Column of tag groups -->
                     </div>
                 </div>
             </div>
