Theme switch works

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <!-- TODO: add a script to set data theme -->
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/all.min.css">
 </head>
@@ -74,9 +75,9 @@
                         <div class="settings-tile-label"><span class="translatable" data-key="theme-selector">Theme selector</span></div>
                         <div class="settings-tile-action">
                             <select name="theme" id="theme-select" class="selector theme">
-                                <option value="0" class="translatable" data-key="browser-theme">Browser theme</option>
-                                <option value="1" class="translatable" data-key="light">Light</option>
-                                <option value="2" class="translatable" data-key="dark">Dark</option>
+                                <option value="browser" class="translatable" data-key="browser-theme">Browser theme</option>
+                                <option value="light" class="translatable" data-key="light">Light</option>
+                                <option value="dark" class="translatable" data-key="dark">Dark</option>
                             </select>
                         </div>
                     </div>
